// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioButton > should render 1`] = `
<div>
  <input
    class="css-1bh759f"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a danger color 1`] = `
<div>
  <input
    class="css-1n4os79"
    color="danger"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a hint color 1`] = `
<div>
  <input
    class="css-180eh5q"
    color="hint"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a info color 1`] = `
<div>
  <input
    class="css-1stwpdq"
    color="info"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a success color 1`] = `
<div>
  <input
    class="css-1bh759f"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a warning color 1`] = `
<div>
  <input
    class="css-b4q9i6"
    color="warning"
    type="radio"
  />
</div>
`;
